[mod] pagination -> no off set 방식으로 로직 변경